<resources>
    <string name="app_name">MakanikApp</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="intro"><u>MakanikApp</u></string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log Out</string>

    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="welcome_name">Welcome "Name"</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_user_maps">UserMapsActivityActivity</string>
    <string name="title_activity_mechanic_maps">MechanicMapsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="view_requests">View Requests</string>

    <string name="log_in_as_user">Log In As User</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="menu_home">Home</string>
    <string name="call_mechanic">Call Mechanic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="sign_in_as_mechanic">Sign As Mechanic</string>
    <string name="view_profile">View Profile</string>
    <string name="request_mechanic">Call Mechanic</string>
    <string name="logout">Logout</string>
    <string name="new_mechanic_register_now">New Mechanic? Register Now</string>
    <string name="mechanic_registration_number">Mechanic Registration Number</string>
    <string name="makanikappNavTitle">MakanikApp</string>
    <string name="makanikap_gmail_com">makanikap@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="quick_ninformation">Quick\nInformation</string>
    <string name="about_us">About Us</string>
    <string name="menu_call_mechanic">Call Mechanic</string>
    <string name="back_to_home_screen">Back to Home Screen</string>
    <string name="breakdown_nhistory">Breakdown\nHistory</string>
    <string name="contact_nus">Contact\nUs</string>
    <string name="about_us_description">MakanikApp is an Android application that connects drivers or vehicle owners to mechanics on the road.\nIt is developed by two students from Strathmore University, Victoria Nyamai and Joan Waweru.</string>
    <string name="back_to_settings">Back to Settings</string>
    <string name="welcome_to_view_my_breakdown_history_activity">Welcome To View My Breakdown History Activity</string>
    <string name="welcome_to_your_requests_page">Welcome to your requests page</string>
    <!--    <string name="title_activity_mechanic_maps">Mechanic Maps</string>-->
    <!--    <string name="title_activity_user_maps">User Maps</string>-->
    <!--    <string name="view_requests">View Requests</string>-->
    <!--    <string name="log_in_as_user">Log In As A User</string>-->
    <!--    <string name="confirm_payment">Confirm Payment</string>-->
    <!--    <string name="call_mechanic">Call Mechanic</string>-->
    <!--    <string name="edit_profile">Mechanic Edit Profile</string>-->
</resources>
