<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us_icon"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_call_mechanic"
            android:icon="@drawable/ic_call_mechanic"
            android:title="@string/menu_call_mechanic" />
        <item
            android:id="@+id/nav_back_to_home_screen"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/back_to_home_screen" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_icon"
            android:title="@string/log_out" />
    </group>
</menu>