<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/textInputForgetEmail"
        android:layout_height="50dp"
        style="@style/parent"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </EditText>

    <Button

        android:id="@+id/button_forgettingpassword"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        style="@style/parent"
        android:background="@color/whiteTextColor"
        android:textColor="@color/themeColor"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textInputForgetEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:onClick="resetpassword">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>