<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    tools:context=".ViewProfileActivity">
    <TextView
        android:id="@+id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/whiteTextColor"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="italic"
        android:textSize="22sp"
        android:textColor="@color/whiteTextColor"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_firstname"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/whiteTextColor">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/profile_displayfirstname"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_firstname"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_lastname"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_displayfirstname"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/whiteTextColor">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/profile_displaylastname"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_lastname"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email"
        android:text="@string/login_email_hint"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_displaylastname"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/whiteTextColor">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/profile_displayemail"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_phonenumber"
        android:text="@string/phone_number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_displayemail"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/whiteTextColor">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/profile_displayphonenumber"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_phonenumber"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp">

    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_logout"
        android:text="@string/log_out"
        android:textColor="@color/themeColor"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@color/whiteTextColor"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_displayphonenumber"
        android:layout_marginTop="30dp"
        android:onClick="logOut"
        android:layout_marginHorizontal="30dp">

    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>